<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">
    <group
        android:id="@+id/standard"
        android:checkableBehavior="single">
        <item
            android:id="@+id/nav_message"
            android:icon="@drawable/short_text"
            android:title="@string/Text" />
        <item
            android:id="@+id/nav_schedule"
            android:icon="@drawable/schedule"
            android:title="@string/schedule" />
        <item
            android:id="@+id/nav_picture"
            android:icon="@drawable/ic_crop_original_black_24dp"
            android:title="@string/images" />
    </group>
    <group
        android:id="@+id/secondary"
        android:checkableBehavior="single">
        <item
            android:id="@+id/settings"
            android:icon="@drawable/ic_settings_black_24dp"
            android:title="@string/settings" />
    </group>
</menu>
