<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="com.dmbangera.deanbangera.peristantmessage.MainActivity">

    <TableRow
        android:id="@+id/table"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_marginTop="10sp"
        android:gravity="center">

        <Button
            android:id="@+id/message_set_button"
            style="?android:attr/buttonBarButtonStyle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/set" />

        <Button
            android:id="@+id/message_loc_button"
            style="?android:attr/buttonBarButtonStyle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/location" />

        <Button
            android:id="@+id/message_del_button"
            style="?android:attr/buttonBarButtonStyle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/delete" />
    </TableRow>
    <TableRow
        android:id="@+id/Color_prompt_row"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_above="@+id/table"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true">

        <Button
            android:id="@+id/Txt_Color"
            style="?android:attr/buttonBarButtonStyle"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:gravity="center"
            android:text="#000000"
            android:textColor="#000000"
            tools:ignore="HardcodedText" />

        <Button
            android:id="@+id/bkd_Color"
            style="?android:attr/buttonBarButtonStyle"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:gravity="center"
            android:textColor="#000000"
            android:text="@string/transparent" />
    </TableRow>

    <TableRow
        android:id="@+id/Color_row"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_above="@id/Color_prompt_row"
        android:layout_marginTop="10sp">

        <TextView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:gravity="center"
            android:text="@string/Text_color" />

        <TextView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:gravity="center"
            android:text="@string/bkd_Color" />
    </TableRow>

    <TableRow
        android:id="@+id/rotation_row"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_above="@id/Color_row"
        android:layout_marginTop="10sp">

        <SeekBar
            android:id="@+id/rotation_seek"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="9"
            android:focusableInTouchMode="true" />

        <TextView
            android:id="@+id/rotation"
            android:layout_width="24sp"
            android:layout_height="wrap_content"
            android:gravity="center" />
    </TableRow>

    <TextView
        android:id="@+id/rotation_prompt"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_above="@id/rotation_row"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="10sp"
        android:text="@string/rotation" />

    <TableRow
        android:id="@+id/size_row"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_above="@id/rotation_prompt"
        android:layout_marginTop="10sp"
        android:orientation="horizontal">

        <SeekBar
            android:id="@+id/size_seeker"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="9"
            android:focusableInTouchMode="true" />

        <TextView
            android:id="@+id/size"
            android:layout_width="24sp"
            android:layout_height="match_parent"
            android:gravity="center" />
    </TableRow>

    <TextView
        android:id="@+id/size_prompt"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_above="@id/size_row"
        android:layout_centerHorizontal="true"
        android:text="@string/size" />

    <FrameLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_above="@+id/size_prompt"
        android:layout_alignParentLeft="true"
        android:layout_alignParentTop="true"
        android:layout_alignParentStart="true">

        <EditText
            android:id="@+id/input"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:gravity="center"
            android:hint="@string/Text" />
    </FrameLayout>

</RelativeLayout>