<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:card_view="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="208dp"
    android:layout_marginLeft="@dimen/margin_medium"
    android:layout_marginRight="@dimen/margin_medium"
    android:gravity="center_vertical">

    <android.support.v7.widget.CardView
        android:id="@+id/card_view"
        android:layout_width="match_parent"
        android:layout_height="200dp"
        android:layout_gravity="center"
        card_view:cardCornerRadius="2dp">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical">

            <TextView
                android:id="@+id/card_title"
                android:layout_width="match_parent"
                android:layout_height="130dp"
                android:layout_gravity="center"
                android:layout_marginTop="24sp"
                android:gravity="center"
                android:text="@string/schedule"
                android:textSize="24sp" />

            <ImageView
                android:layout_width="match_parent"
                android:layout_height="130dp"
                android:layout_gravity="center"
                android:layout_marginTop="24sp"
                android:contentDescription="@string/image_to_be_scheduled"
                android:visibility="gone" />

            <TableRow
                android:layout_width="match_parent"
                android:layout_height="match_parent">

                <TextView
                    android:id="@+id/card_date"
                    android:layout_height="match_parent"
                    android:layout_weight="1"
                    android:gravity="center"
                    android:text="@string/default_date"
                    android:textSize="24sp" />

                <TextView
                    android:id="@+id/card_time"
                    android:layout_height="match_parent"
                    android:layout_weight="1"
                    android:gravity="center"
                    android:text="@string/default_time"
                    android:textSize="24sp" />
            </TableRow>
        </LinearLayout>
    </android.support.v7.widget.CardView>
</FrameLayout>