<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/relativeLayout"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <TableRow
        android:id="@+id/table2"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_marginTop="10sp"
        android:gravity="center">

        <Button
            android:id="@+id/schButton"
            style="?android:attr/buttonBarButtonStyle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/schedule" />

        <Button
            android:id="@+id/un_schButton"
            style="?android:attr/buttonBarButtonStyle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/un_schedule" />
    </TableRow>

    <TableRow
        android:id="@+id/datetime_text_Row"
        android:layout_width="match_parent"
        android:stretchColumns="*"
        android:layout_height="wrap_content"
        android:layout_marginTop="8sp"
        android:layout_marginBottom="8sp"
        android:layout_above="@id/table2">
        <ImageView
            android:id="@+id/schedule_time_set"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:contentDescription="@string/set_time"
            android:src="@drawable/ic_alarm_black_24dp" />
        <TextView
            android:id="@+id/scheduled_time"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:gravity="center" />
    </TableRow>

    <TableRow
        android:id="@+id/datetime_image_Row"
        android:layout_width="match_parent"
        android:stretchColumns="*"
        android:layout_marginTop="8sp"
        android:layout_marginBottom="8sp"
        android:layout_height="wrap_content"
        android:layout_above="@id/datetime_text_Row">

        <ImageView
            android:id="@+id/schedule_date_set"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:contentDescription="@string/set_date"
            android:src="@drawable/schedule" />
        <TextView
            android:id="@+id/scheduled_date"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:gravity="center" />
    </TableRow>

    <TextView
        android:id="@+id/schBool"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true" />

    <EditText
        android:id="@+id/input2"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_above="@id/datetime_image_Row"
        android:layout_below="@id/schBool"
        android:fadeScrollbars="false"
        android:gravity="center"
        android:hint="@string/Text" />


</RelativeLayout>