<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">


    <Button
        android:id="@+id/WidgetSet"
        style="?android:attr/buttonBarButtonStyle"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:text="@string/set" />

    <TableRow
        android:id="@+id/Widget_Color_prompt_row"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_above="@id/WidgetSet"
        android:layout_marginTop="10sp">

        <Spinner
            android:id="@+id/Widget_Txt_Color"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:entries="@array/rainbow"
            android:gravity="center"
            android:spinnerMode="dialog" />

        <Spinner
            android:id="@+id/Widget_bkd_Color"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:entries="@array/rainbowBKD"
            android:gravity="center"
            android:spinnerMode="dialog" />
    </TableRow>

    <TableRow
        android:id="@+id/Widget_Color_row"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_above="@id/Widget_Color_prompt_row"
        android:layout_marginTop="10sp">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:gravity="center"
            android:text="@string/Text_color" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:gravity="center"
            android:text="@string/bkd_Color" />
    </TableRow>

    <TableRow
        android:id="@+id/Widget_size_row"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_above="@id/Widget_Color_row"
        android:layout_marginTop="10sp"
        android:orientation="horizontal">

        <SeekBar
            android:id="@+id/Widget_size_seeker"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="9"
            android:focusableInTouchMode="true" />

        <TextView
            android:id="@+id/Widget_size"
            android:layout_width="24sp"
            android:layout_height="match_parent"
            android:gravity="center" />
    </TableRow>

    <TextView
        android:id="@+id/Widget_size_prompt"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_above="@id/Widget_size_row"
        android:layout_centerHorizontal="true"
        android:text="@string/size" />

    <EditText
        android:id="@+id/Widget_input"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_above="@id/Widget_size_prompt"
        android:layout_alignParentTop="true"
        android:gravity="center"
        android:hint="@string/Text" />
</RelativeLayout>