<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin">
    <TableRow
        android:id="@+id/table"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_marginTop="10sp"
        android:gravity="center">

        <Button
            android:id="@+id/image_set_button"
            style="?android:attr/buttonBarButtonStyle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/set" />

        <Button
            android:id="@+id/image_loc_button"
            style="?android:attr/buttonBarButtonStyle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/location" />

        <Button
            android:id="@+id/image_del_button"
            style="?android:attr/buttonBarButtonStyle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/delete" />
    </TableRow>
    <TableRow
        android:id="@+id/rotation_row"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_above="@id/table"
        android:layout_marginTop="10sp">

        <SeekBar
            android:id="@+id/rotation_seek"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="9"
            android:focusableInTouchMode="true" />

        <TextView
            android:id="@+id/rotation"
            android:layout_width="25sp"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:text="0"/>
    </TableRow>
    <TextView
        android:id="@+id/rotation_prompt"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/rotation"
        android:layout_above="@+id/rotation_row"
        android:layout_centerHorizontal="true" />

    <TableRow
        android:id="@+id/size_row"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_above="@id/rotation_prompt"
        android:layout_marginTop="10sp"
        android:orientation="horizontal">

        <SeekBar
            android:id="@+id/size_seeker"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="9"
            android:focusableInTouchMode="true" />

        <TextView
            android:id="@+id/size"
            android:layout_width="28sp"
            android:layout_height="match_parent"
            android:gravity="center"
            android:text="1.0"/>
    </TableRow>
    <TextView
        android:id="@+id/size_prompt"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_above="@id/size_row"
        android:layout_centerHorizontal="true"
        android:text="@string/size" />
    <TableRow
        android:id="@+id/opacity_row"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_above="@id/size_prompt"
        android:layout_marginTop="10sp"
        android:orientation="horizontal">

        <SeekBar
            android:id="@+id/opacity_seek"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="9"
            android:focusableInTouchMode="true" />

        <TextView
            android:id="@+id/opacity"
            android:layout_width="28sp"
            android:layout_height="match_parent"
            android:gravity="center"
            android:text="1.00"/>
    </TableRow>
    <TextView
        android:id="@+id/trans_prompt"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_above="@id/opacity_row"
        android:layout_centerHorizontal="true"
        android:text="@string/opacity" />
    <FrameLayout
        android:id="@+id/image_listener"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_above="@+id/trans_prompt"
        android:layout_alignParentLeft="true"
        android:layout_alignParentTop="true"
        android:layout_alignParentStart="true">

        <ImageView
            android:id="@+id/image"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:scaleType="centerInside"
            android:adjustViewBounds="true"
            android:background="@drawable/ic_insert_photo_black_24dp"
            android:contentDescription="@string/image_to_be_set" />
    </FrameLayout>
</RelativeLayout>